Service&Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: myapplication.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-service
          servicePort: 80
